avoid overlap between content and bottom banner

--- a/app/app/css/app.css
+++ b/app/app/css/app.css
@@ -9,6 +9,7 @@ body {
     -o-background-size: cover;
     background-size: cover !important;
     color: white !important;
+    padding-bottom: 2em;
 }
 
 #wrapper {}
